force-app/main/default/objects/Engagement_Grid_Segment__mdt/Engagement_Grid_Segment__mdt.object-meta.xml
<CustomObject>
	<label>Engagement Grid Segment</label>
	<pluralLabel>Engagement Grid Segments</pluralLabel>
</CustomObject>