force-app/main/default/objects/Engagement_Grid_Segment__mdt/fields/Colour__c.field-meta.xml
<CustomField>
	<fullName>Colour__c</fullName>
	<inlineHelpText>HEX code for segment colour, how it appears on engagement grid and contact page.</inlineHelpText>
	<label>Colour</label>
	<length>7</length>
	<required>true</required>
	<type>Text</type>
</CustomField>