force-app/main/default/objects/Engagement_Grid_Segment__mdt/fields/Max_RFM_Score__c.field-meta.xml
<CustomField>
	<fullName>Max_RFM_Score__c</fullName>
	<inlineHelpText>Must be in format 1-1-1</inlineHelpText>
	<label>Max RFM Score</label>
	<length>10</length>
	<type>Text</type>
</CustomField>