force-app/main/default/objects/Engagement_Grid_Segment__mdt/fields/Min_RFM_Score__c.field-meta.xml
<CustomField>
	<fullName>Min_RFM_Score__c</fullName>
	<inlineHelpText>Must be in format 1-1-1</inlineHelpText>
	<label>Min RFM Score</label>
	<length>10</length>
	<required>true</required>
	<type>Text</type>
</CustomField>